@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230917"
-#define public MagickPackageReleaseDate "snapshot-20230917"
+#define public MagickPackageVersionAddendum ".020230918"
+#define public MagickPackageReleaseDate "snapshot-20230918"
