@@ -1123,6 +1123,15 @@ The following definitions may be created:</pp>
 
 <pp>
 <dl>
+<dt>bmp:allow-jpeg={true|false}</dt>
+<dd>If the bmp:allow-jpeg value is set to true, then enable BMP files
+using JPEG compression, under control of the compression option (which
+may be JPEG already if the input file is JPEG).  JPEG-compressed BMP
+files are very rare so this option acts as a safeguard to assure that
+the current compression setting does not accidentally produce
+JPEG-compressed BMP files which most other software is unable to read.
+</dd>
+
 <dt>cineon:colorspace={rgb|cineonlog}</dt>
 <dd>Use the cineon:colorspace option when reading a Cineon file to
 specify the colorspace the Cineon file uses. This overrides the colorspace
