@@ -1,3 +1,7 @@
+2023-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* doc/options.imdoc: Add documentation for -define bmp:allow-jpeg.
+
 2023-09-18  Fojtik Jaroslav  <JaFojtik@yandex.com>
 
 	* coders/bmp.c Ability to write JPG encoded image.
